--- a/vijay.html
+++ b/vijay.html
@@ -1,2 +1,15 @@
 <center><h1>Vijay</h1></center>
-<p>Joseph Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay, is an Indian actor and playback singer who works in Tamil cinema. In a career spanning in just over 3 decades, Vijay has acted in over 65 films and is one of the most commercially successful actors in Tamil cinema with multiple films amongst the highest-grossing Tamil films of all time and is amongst the highest paid actors in India</p>
+<p>
+  Joseph Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay,
+  is an Indian actor and playback singer who works in Tamil cinema. In a career
+  spanning in just over 3 decades, Vijay has acted in over 65 films and is one
+  of the most commercially successful actors in Tamil cinema with multiple films
+  amongst the highest-grossing Tamil films of all time and is amongst the
+  highest paid actors in India
+</p>
+<hr />
+<p>
+  Referred to as "Thalapathy" (transl. commander), Vijay has a significant fan
+  following. In February 2024, Vijay announced his retirement from films and his
+  entry into politics with the launch of Tamilaga Vettri Kazhagam.
+</p>
